--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,19 +1,26 @@
+.container{
+	margin-left:5px;
+}
 .row {
-  margin-bottom: 20px;
+  margin-bottom: 5px;  
 }
 .row .row {
   margin-top: 10px;
   margin-bottom: 0;
 }
 .a-row{
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #eee;
   border: 1px solid #ddd;
   background-color: rgba(86,61,124,.15);
   border: 1px solid rgba(86,61,124,.2);
 }
-
+.tightCell{
+	padding-left: 1px;
+	padding-right: 1px;
+	/*margin-left: 1px;*/
+}
 input
 {
 -moz-border-radius:10px; /* Firefox */
@@ -21,4 +28,12 @@ input
 -khtml-border-radius: 10px; /* KHTML */
 border-radius: 10px; /* CSS3 */
 behavior:url("border-radius.htc");
+}
+
+.go-button{
+    background:url(/resources/images/arrow-right.png) no-repeat;
+    cursor:pointer;
+    width: 50px;
+    height: 25px;
+    border: none;
 }
