--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,9 +1,3 @@
-.container{
-	margin-left:5px;
-}
-.row {
-  margin-bottom: 5px;  
-}
 .row .row {
   margin-top: 10px;
   margin-bottom: 0;
@@ -11,14 +5,17 @@
 .a-row{
   padding-top: 5px;
   padding-bottom: 5px;
+  margin: 5px 5px 5px 5px;
+  min-height: 150px;
+  max-height: 150px;
   background-color: #eee;
   border: 1px solid #ddd;
   background-color: rgba(86,61,124,.15);
   border: 1px solid rgba(86,61,124,.2);
 }
 .tightCell{
-	padding-left: 1px;
-	padding-right: 1px;
+/*	padding-left: 1px;
+	padding-right: 1px; */
 	/*margin-left: 1px;*/
 }
 input
